Split id and version, filter dependencies by import list

--- a/Orc.DependencyViewer/Views/MainWindow.xaml
+++ b/Orc.DependencyViewer/Views/MainWindow.xaml
@@ -40,7 +40,12 @@
                     ToolTip="Open package source settigns">
                 <Image Source="{orccontrols:FontImage {x:Static local:FontAwesome.Cogs}, FontFamily=FontAwesome}"/>
             </Button>
-            
+
+            <CheckBox Content="Choose Stable Dependencies"
+                      IsChecked="{Binding UseStableDependencies}"/>
+            <CheckBox Content="Build Dependency tree using only imported list"
+                      IsChecked="{Binding BuildDependenciesOnlyFromList}"/>
+
         </StackPanel>
 
         <TextBlock Text="Package list:"
